# Davinci-Resolve-TimeTracker

./: .gitignore  AGENTS.md  CONTEXT.md  CONTRIBUTING.md  LICENSE  README.md  install.ps1  install.py  install.sh  pyproject.toml  uninstall.ps1  uninstall.py  uninstall.sh
.github/workflows/: ci.yml
docs/: agentic-development-prompt.md  development.md  platform-support.md  roadmap.md  troubleshooting.md
docs/adr/: 0001-electron-shadcn-ui-python-sidecar.md  0002-windows-packaged-distribution.md
docs/agents/: domain.md  issue-tracker.md
docs/research/: page-activity-breakdown-trust-boundary.md  resolve-runtime-probe-results.md  resolve-scripting-feasibility.md  studio-menu-launch-verification.md  windows-idle-detection-strategy.md
frontend/: README.md  components.json  index.html  package-lock.json  package.json
frontend/electron/: main.cjs  preload.cjs  sidecar-lifecycle.cjs  startup-settings.cjs  tray-status.cjs
frontend/src/: App.tsx  index.css  vite-env.d.ts
frontend/src/components/ui/: checkbox.tsx  select.tsx
frontend/src/lib/: api.ts  dashboard.ts  sort.ts
frontend/test/: dashboard.test.mjs  page-chart-layout.test.mjs  settings-tooltip.test.mjs  sidecar-client.test.mjs  sidecar-lifecycle.test.mjs  sortable-tables.test.mjs  startup-settings.test.mjs  tray-status.test.mjs
scripts/: ResolveTimeTracker.py  ResolveTimeTrackerMenu.py  ResolveTimeTrackerProbeMenu.py  install_resolve_menu.py  probe_resolve_pages.py  probe_resolve_render_transition.py  probe_resolve_runtime.py
src/resolve_time_tracker/: __init__.py  activity_tracker.py  api.py  database.py  pdf_export.py  report_projection.py  resolve_bridge.py  resolve_ui.py  session_engine.py  tracking_engine.py  ui.py
src/resolve_time_tracker/activity_tracker/: __init__.py
src/resolve_time_tracker/database/: __init__.py
src/resolve_time_tracker/exporter/: __init__.py
src/resolve_time_tracker/resolve_bridge/: __init__.py
src/resolve_time_tracker/session_engine/: __init__.py
src/resolve_time_tracker/settings/: __init__.py
src/resolve_time_tracker/ui/: __init__.py
tests/: test_api.py  test_bootstrap_install.py  test_core_tracking.py  test_install_resolve_menu.py  test_launcher.py  test_package.py  test_print_styles.py  test_report_projection.py  test_resolve_ui.py  test_runtime_tracking.py  test_ui_store_support.py  test_uninstall.py
