[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "resolve-time-tracker"
version = "0.1.0"
description = "MIT open-source time tracker for DaVinci Resolve Studio."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "Resolve Time Tracker contributors" }
]
keywords = ["davinci-resolve", "time-tracking", "sqlite", "csv", "video-editing"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Programming Language :: Python :: 3",
  "Topic :: Multimedia :: Video",
]

[tool.ruff]
target-version = "py310"

[tool.ruff.lint.per-file-ignores]
"scripts/ResolveTimeTracker.py" = ["E402"]

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.15.20",
]
